# effects

./: .travis.yml  LICENSE  README.md  changelog.md  effects.cabal  freer.cabal  stack.yaml
bench/: Core.hs
examples/src/: Coroutine.hs  Cut.hs  Fresh.hs  Main.hs  NonDet.hs  NonDetEff.hs  Teletype.hs  Trace.hs
src/Control/Monad/: Effect.hs  Freer.hs
src/Control/Monad/Effect/: Coroutine.hs  Cut.hs  Embedded.hs  Exception.hs  Fail.hs  Failure.hs  Fresh.hs  Fused.hs  Internal.hs  NonDet.hs  NonDetEff.hs  Reader.hs  Resource.hs  Resumable.hs  Run.hs  State.hs  StateRW.hs  TH.hs  Trace.hs  Update.hs  Writer.hs
src/Control/Monad/Freer/: Coroutine.hs  Cut.hs  Exception.hs  Fresh.hs  Internal.hs  NonDetEff.hs  Reader.hs  State.hs  StateRW.hs  Trace.hs  Writer.hs
src/Control/Monad/Fused/: Internal.hs  State.hs
src/Data/: FTCQueue.hs  Union.hs
src/Data/Open/: Union.hs  Union51.hs
src/Data/Union/: Templates.hs
tests/: Tests.hs
tests/Tests/: Coroutine.hs  Exception.hs  Fresh.hs  NonDet.hs  NonDetEff.hs  Reader.hs  State.hs  StateRW.hs  Union.hs
