name:                effects
version:             0.3.2.0
synopsis:            Implementation of the Freer Monad
license:             BSD3
license-file:        LICENSE
author:              Josh Vera, Allele Dev
maintainer:          josh@joshvera.com
copyright:           Josh Vera, Allele Dev 2016
homepage:            https://github.com/joshvera/effects
bug-reports:         https://github.com/joshvera/effects/issues
category:            Control
build-type:          Simple
cabal-version:       >=1.18
tested-with:         GHC==7.10.2
description:

    Effects is an implementation of "Freer Monads, More Extensible
    Effects".
    .
    The key features of Freer are:
    .
    * An efficient effect system for Haskell - as a library!
    .
    * Implementations for several common Haskell monad instances:
    .
    * Core components for defining your own Effects

extra-source-files:
    README.md
    changelog.md
    CODE_OF_CONDUCT.md

source-repository head
    type: git
    location: git clone https://github.com/joshvera/effects.git

library
  exposed-modules:     Control.Monad.Effect
                     , Control.Monad.Effect.Coroutine
                     , Control.Monad.Effect.Cut
                     , Control.Monad.Effect.Exception
                     , Control.Monad.Effect.Fail
                     , Control.Monad.Effect.Fresh
                     , Control.Monad.Effect.Internal
                     , Control.Monad.Effect.NonDet
                     , Control.Monad.Effect.Reader
                     , Control.Monad.Effect.Resumable
                     , Control.Monad.Effect.State
                     , Control.Monad.Effect.StateRW
                     , Control.Monad.Effect.Trace
                     , Control.Monad.Effect.Writer
                     , Data.Union
  build-depends:       base >=4.7 && <5
                     , type-aligned
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable examples
  main-is:             Main.hs
  other-modules:       Common
                     , Coroutine
                     , Cut
                     , Fresh
                     , NonDet
                     , Teletype
                     , Trace
  build-depends:       base >=4.7 && <5
                     , effects
  hs-source-dirs:      examples/src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  other-modules:       Tests.Common
                     , Tests.Coroutine
                     , Tests.Exception
                     , Tests.Fresh
                     , Tests.NonDet
                     , Tests.Reader
                     , Tests.State
                     , Tests.StateRW
                     , Tests.Union
  build-depends:    base
                  , effects
                  , tasty
                  , tasty-hunit
                  , tasty-quickcheck
                  , QuickCheck

  ghc-options: -Wall

benchmark core
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Core.hs
  build-depends:    base
                  , effects
                  , criterion
                  , mtl
                  , free

  ghc-options: -Wall -O2
